[package]
name = "smart-send"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9"
bytemuck = {version = "1.7.2", features = ["derive"]}
solana-program = "=1.14.11"
num-traits = "0.2.14"
num-derive = "0.3"
thiserror = "1.0"


[lib]
crate-type = ["cdylib", "lib"]