[package]
name = "clad"
version = "0.1.0"
description = "CL-AMM-backed Leveraged Trading"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs"
categories = ["finance"]
keywords = ["solana", "dex", "leverage", "exchange"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test = []
default = []

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.26.0", features=["init-if-needed"] }
anchor-spl = { version = "0.26.0" }
solana-program = "1.14.18"
solana-security-txt = "1.1.0"
spl-token = {version = "3.3", features = ["no-entrypoint"]}
pyth-sdk-solana = "0.7.2"
ahash = "=0.7.6"
num-traits = "0.2.15"
num = "0.4.0"
jupiter-cpi = "4.0.3"
hashbrown = "0.13.1"
winnow = "=0.4.1"
toml_datetime = "=0.6.1"
bytemuck = "1.13.1"
borsh = "0.9.1"
uint = {version = "0.9.1", default-features = false}

[dev-dependencies]
solana-program-test = "1.14.18"
solana-sdk = "1.14.18"
tokio = { version = "1.0.0", features = ["macros"]}
bonfida-test-utils = "0.2.1"
bincode = "1.3.3"
maplit = "1.0.2"
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]