cargo-features = ["edition2021"]

[package]
name = "recovery"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9"
bytemuck = {version = "1.7.2", features = ["derive"]}
solana-program = "=1.14.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
num-traits = "0.2.14"
num-derive = "0.3"
thiserror = "1.0"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.14.11"
solana-sdk = "=1.14.11"
solana-validator = "=1.14.11"

[lib]
crate-type = ["cdylib", "lib"]
