[package]
name = "clad"
version = "0.1.0"
description = "CL-AMM-backed Leveraged Trading"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs"
categories = ["finance"]
keywords = ["solana", "dex", "leverage", "exchange"]
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test = []
default = []

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"
solana-program = "1.14.18"
solana-security-txt = "1.1.0"
pyth-sdk-solana = "0.7.2"
ahash = "=0.7.6"
num-traits = "0.2.15"
num = "0.4.0"

[dev-dependencies]
solana-program-test = "1.14.18"
solana-sdk = "1.14.18"
tokio = { version = "1.0.0", features = ["macros"]}
bonfida-test-utils = "0.2.1"
bincode = "1.3.3"
maplit = "1.0.2"