cargo-features = ["edition2021"]

[package]
name = "quineprogram"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9"
bytemuck = {version = "1.7.2", features = ["derive"]}
solana-program = "=1.14.12"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
num-traits = "0.2.14"
num-derive = "0.3"
thiserror = "1.0"
shank = "0.0.12"
serde = "1.0.152"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.14.12"
solana-sdk = "=1.14.12"
solana-validator = "=1.14.12"

[lib]
crate-type = ["cdylib", "lib"]
